fix spacing between friends on social page

--- a/src/css/Shared/page2.css
+++ b/src/css/Shared/page2.css
@@ -3,9 +3,6 @@ html{
     padding: 0;
     margin:0;
 }
-* {
-    outline: 1px solid red;
-  }
 
 #root{
     width:100%;
